<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search"
        android:iconTint="@color/secondary_variant"
        android:enabled="true"
        android:visible="true" />

    <item
        android:id="@+id/myAdsFragment"
        android:icon="@drawable/ic_applications"
        android:title="@string/nav_my_ads" />

    <item
        android:id="@+id/myApplicationsFragment"
        android:icon="@drawable/ic_announcement"
        android:title="@string/nav_applications"
        android:iconTint="@color/secondary_variant" />


    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />


</menu>